# argos3-kilobots-gradientFollowing

./: .gitignore  README.md
argos/: README.md  config_seed001.argos  config_seed003.argos  config_seed007.argos  config_seed051.argos  data_file.txt
argos/plots/: boxplots.py  configs_first_behavior_10e5_budget.csv  configs_first_behavior_10e5_budget_with_new_turning.csv  configs_second_behavior_10e5_budget.csv  configs_second_behavior_10e5_budget_with_new_turning.csv  irace_metric.py  metrics.py  trajectories.py
argos/src/: CMakeLists.txt
argos/src/cmake/: ARGoSBuildChecks.cmake
argos/src/examples/behaviors/: CMakeLists.txt  custom_test_listener.c  custom_test_speaker.c  gradient_follower.c  social_behavior.c  social_behavior_base.c  social_behavior_base2.c
argos/src/examples/experiments/: kilobot_ALF_collectiveSensing.argos  kilobot_ALF_communication.argos  kilobot_ALF_gradientFollower.argos  (+2 more)
argos/src/examples/loop_functions/ARK_loop_functions/communication_test/: CMakeLists.txt  Communication_ALF.cpp  Communication_ALF.h
argos/src/examples/loop_functions/ARK_loop_functions/gradientFollowing/: CMakeLists.txt  gradientFollowing_ALF.cpp  gradientFollowing_ALF.h
argos/tuning/: configurations.txt  scenario.txt  target-runner
argos/tuning/Results/: c54-1-213618548.stderr  c54-1-213618548.stdout  ctestConfig1-1-1234567.stdout  ctestConfig2-1-1234567.stderr  ctestConfig2-1-1234567.stdout  irace.Rdata  results.txt  results5000.txt
argos/tuning2/: configurations.txt  target-runner
argos/tuning2/Results/: irace.Rdata  results5000.txt
(+17 files in other folders)
